# ProteinGymPy

./: .gitignore  .readthedocs.yaml  CITATION.md  README.md  demo.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  test_structure_plot.py
.github/workflows/: publish-to-test-pypi.yml
docs/: ace2_structure.html  data_importation_and_representation.ipynb  index.md  make_functions_references.py  requirements.txt  visualization_exploration.ipynb
docs/assets/: ace2_structure.html
docs/reference/: available_supervised_models.md  available_zero_shot_models.md  benchmark_models.md  create_complete_metadata_table.md  dms_corr_plot.md  get_alphamissense_proteingym_data.md  get_dms_metadata.md  get_dms_substitution_data.md  get_supervised_metrics.md  get_supervised_substitution_data.md  get_zero_shot_metrics.md  get_zero_shot_substitution_data.md  model_corr_plot.md  plot_dms_heatmap.md  plot_structure.md
examples/: benchmark_models_example.py  dms_corr_plot_example.py  model_corr_plot_example.py  plot_dms_heatmap_examples.py  plot_zeroshot_heatmap.md  plot_zeroshot_heatmap_example.py  proteingym_pipeline_examples.py
proteingympy/: __init__.py  data_import.py  pyproject.toml
proteingympy/src/proteingympy/: __init__.py
pyproteingym/: pyproject.toml
pyproteingym/src/pyproteingym/: __init__.py
src/proteingympy/: __init__.py  benchmark_models.py  data_import_funcs.py  dms_corr_plot.py  make_alphamissense_supplementary.py  make_dms_substitutions.py  make_metadata.py  make_supervised_scores.py  make_zero_shot_substitutions.py  make_zeroshot_dms_benchmarks.py  model_corr_plot.py  plot_dms_heatmap.py  plot_structure.py  plot_zeroshot_heatmap.py  uniprot_utils.py
src/pyproteingym/: __init__.py  data_import_funcs.py  make_alphamissense_supplementary.py  make_dms_substitutions.py  make_metadata.py  make_zeroshot_dms_benchmarks.py
tests/: test_basic.py  test_benchmark_models.py  test_data_pipelines.py  test_model_corr_plot.py  test_plot_dms_heatmap.py  test_structure_export.py
