[project]
name = "ProteinGymPy"
version = "0.1.0"
description = "Programmatic access to ProteinGym datasets with visualization tools."
readme = "README.md"
authors = [
    { name = "Tyrone Lee", email = "tyrone_lee@hms.harvard.edu" },
    { name = "Tram Nguyen", email = "tram_nguyen@hms.harvard.edu" }

]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
]

[project.scripts]
proteingympy = "proteingympy:main"

[project.optional-dependencies]
visualization = [
    "scipy>=1.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
