[project]
name = "pyproteingym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tram-nguyen-n", email = "tram_nguyen@hms.harvard.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
]

[project.scripts]
pyproteingym = "pyproteingym:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
